# PaintApp

./: .gitignore  Makefile  README.md  app_icon.icns  build_simple_dmg.py  create_icon.py  pyproject.toml  test_main.py
src/: main.py
src/paintapp/: __init__.py
src/paintapp/assets/kv/: paint.kv
src/paintapp/core/: __init__.py  app.py  canvas.py  config.py
src/paintapp/ui/: __init__.py  layout.py
src/paintapp/utils/: __init__.py  constants.py  helpers.py
src/paintapp/widgets/: __init__.py  buttons.py  text_input.py  toolbar.py
